--- a/absence-tracker/pom.xml
+++ b/absence-tracker/pom.xml
@@ -216,6 +216,12 @@
             <version>1.3.174</version>
         </dependency>
 
+        <dependency>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+            <version>1.4.2</version><!-- or latest version -->
+        </dependency>
+
         <!--
         <dependency>
             <groupId>com.h2database</groupId>
