--- a/absence-tracker/src/main/webapp/WEB-INF/web.xml
+++ b/absence-tracker/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,11 @@
         <param-value>noveria</param-value>
     </context-param>
 
+    <context-param>
+        <param-name>primefaces.FONT_AWESOME</param-name>
+        <param-value>true</param-value>
+    </context-param>
+
     <!-- Spring Security Facelets Tag Library -->
     <context-param>
         <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
